2003-06-04  Mark Mitchell  <mark@codesourcery.com>

	* zope-dtml/DocumentTemplate/.cvsignore: Remove.
	* zope-dtml/ExtensionClass/.cvsignore: Remove.

2003-06-03  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dg_test.py (DGTest.DGException): New class.
	(DGTest._RunDGTest): Tweak annotation formatting.
	(DGTest._ExecuteFinalCommand): Use DGException to signal problems,
	rather than NotImplementedError.

2003-06-02  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (INSTALL_DOCUMENTATION): New variable.
	(doc-install): Guard it by testing INSTALL_DOCUMENTATION.
	* configure.in (INSTALL_DOCUMENTATION): Set it.
	* configure: Regenerated.
	
	* README: Mention HappyDoc.
	* qm/test/classes/dejagnu_stream.py
	(DejaGNUStream.__summary_outcomes): New variable.
	(DejaGNUStream.Summarize): Use it.
	* qm/test/classes/dejagnu_test.py (DejaGNUTest._ParseTclWords):
	Correct variable substitution.

	* qm/test/classes/dejagnu_stream.py: New file.
	* qm/test/classes/dejagnu_test.py: New file.
	* qm/test/classes/dejagnu_base.py: New file.
	* qm/test/classes/dg_test.py: New file.
	* qm/test/classes/classes.qmc: Update.
	
2003-05-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py: Import result_stream.
	(QMTest.summary_formats): Add "batch".
	(QMTest.__init__): Set __expected_outcomes to None.
	(QMTest.__ExecuteSummarize): Simplify.
	(QMTest.__ExecuteRun): Likewise.
	(QMTest.__ExecuteGUI): Likewise.
	(QMTest.__FilterTestsToRun): Remove expectations parameter; use
	__GetExpectedOutcomes.
	(QMTest.__GetExpectedOutcomes): Cache results.
	(QMTest.__GetResultStreams): Create the TextResultStream here.
	* qm/test/execution_engine.py (ExecutionEngine.__init__): Add
	expectations parameter.
	(ExecutionEngine.Run): Return a value.
	(ExecutionEngine._AddResult): Set any_unexpected_outcomes if
	appropriate.
	* qm/test/execution_thread.py (ExecutionThread.__init__): Add
	expectations parameter.
	* qm/test/result_stream.py (ResultStream.arguments): New
	variable.