@@ -1,5 +1,8 @@
 2003-06-04  Mark Mitchell  <mark@codesourcery.com>
 
+	* qm/test/classes/dejagnu_test.py (DejaGNUTest._ParseTclWords):
+	Recognize that "[]" does not represent command substitution.
+
 	* zope-dtml/DocumentTemplate/.cvsignore: Remove.
 	* zope-dtml/ExtensionClass/.cvsignore: Remove.
 
